meta data img correction

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta property="og:url" content="https://nukagrizz.github.io/Joe-React-Portfolio/" />
     <meta property="og:type" content="article" />
     <meta property="og:description" content="Portfolio of Joe Tremols" />
-    <meta property="og:image" content="static\assets\Images\Joe.jpg" />
+    <meta property="og:image" content="media\Joe.b22c7800.jpg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
