--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,6 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Portfolio of Joe Tremols" />
-    <meta property="og:title" content="Joe Tremols Portfolio" />
-    <meta property="og:url" content="https://nukagrizz.github.io/Joe-React-Portfolio/" />
-    <meta property="og:type" content="article" />
-    <meta property="og:description" content="Portfolio of Joe Tremols" />
-    <meta property="og:image" content="https://drive.google.com/file/d/1T4j6Jf4U9pFx75LSLxV7EhDCb4iVN0D3/view?usp=sharing" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -31,7 +25,27 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Joe Portfolio</title>
+    <!-- HTML Meta Tags -->
+      <title>Joe Tremols</title>
+      <meta name="description" content="Full-Stack Engineer | MERN | Veteran Entrepreneur | Inventor | Entrepreneur Mentor">
+
+    <!-- Google / Search Engine Tags -->
+      <meta itemprop="name" content="Joe Tremols">
+      <meta itemprop="description" content="Full-Stack Engineer | MERN | Veteran Entrepreneur | Inventor | Entrepreneur Mentor">
+      <meta itemprop="image" content="http://drive.google.com/uc?id=1RTcJYUiq7Z43EUpmWpxTQtDP9v2W1ZTQ">
+
+    <!-- Facebook Meta Tags -->
+      <meta property="og:url" content="https://nukagrizz.github.io/Joe-React-Portfolio">
+      <meta property="og:type" content="website">
+      <meta property="og:title" content="Joe Tremols">
+      <meta property="og:description" content="Full-Stack Engineer | MERN | Veteran Entrepreneur | Inventor | Entrepreneur Mentor">
+      <meta property="og:image" content="http://drive.google.com/uc?id=1RTcJYUiq7Z43EUpmWpxTQtDP9v2W1ZTQ">
+
+    <!-- Twitter Meta Tags -->
+      <meta name="twitter:card" content="summary_large_image">
+      <meta name="twitter:title" content="Joe Tremols">
+      <meta name="twitter:description" content="Full-Stack Engineer | MERN | Veteran Entrepreneur | Inventor | Entrepreneur Mentor">
+      <meta name="twitter:image" content="http://drive.google.com/uc?id=1RTcJYUiq7Z43EUpmWpxTQtDP9v2W1ZTQ">
   </head>
 
   <body>
